--- a/client/src/Views/home.css
+++ b/client/src/Views/home.css
@@ -1,3 +1,5 @@
 .backgroundImage{
-    background-image: url(tc-foodshare\client\public\food.jpg);
+    background-image: url(food.jpg);
+    background-repeat: no-repeat;
+    background-size: auto;
 }
