--- a/client/src/components/Input.css
+++ b/client/src/components/Input.css
@@ -1,18 +1,22 @@
-.card{
-    margin-top: 20px;
-    background-color: rgb(211, 207, 207);
+.card {
+  margin-top: 20px;
+  background-color: rgb(243, 242, 242);
+  max-width: 50%;
+  margin-left: 50px;
+  text-align: left;
+  justify-content: center;
 }
 
-.textarea{
-    margin-top: 20px;
+.textarea {
+  margin-top: 20px;
 }
 
-.address{
-margin-top: 20px;
-margin-bottom: 20px;
+.address {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.title{
-    margin-top: 10px;
-    text-align: center;
+.title {
+  margin-top: 10px;
+  text-align: center;
 }
