--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,6 +1,12 @@
-.footer{
-    text-align: center;
-    margin-top: 20px;
-    color:white;
-    background-color: black;
+.footer {
+  text-align: center;
+  margin-top: 40px;
+  color: white;
+  background-color: black;
+  margin-bottom: 0px;
+  justify-content: first baseline;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
