--- a/client/src/components/image.css
+++ b/client/src/components/image.css
@@ -1,5 +1,5 @@
 .food {
-    height: 500px;
+    height: auto;
     background-size: auto;
     background-position: center;
     position: relative;
