--- a/client/src/Views/home.css
+++ b/client/src/Views/home.css
@@ -42,7 +42,8 @@
 
 .about-text-box {
   height: auto;
-  width: 100%;
+  width: 60%;
+  margin: 0 auto;
   justify-content: center;
   justify-items: center;
   align-content: center;
